syntax = "proto3";

option go_package = "common/module/proto/post_service";

package post_service;

import "google/api/annotations.proto";

service PostService{


  rpc get(GetRequest) returns(GetResponse) {
    option (google.api.http) = {
      get: "/post/{Id}"
    };
  }



}
message GetRequest {
  string Id = 1;

}

message GetResponse {
  Post Post = 1;

}

message Post {
  string Id = 1;
  string Username = 2;
  string PostText = 3;
  string ImagePaths = 4;
  string DatePosted = 6;
  int32 LikesNumber = 7;
  int32 DislikesNumber = 8;
  int32 CommentsNumber = 10;
}